--- a/public/css/app.css
+++ b/public/css/app.css
@@ -8426,8 +8426,32 @@ body {
 
 /* User profile page */
 
+/* User profile page */
+
 .users-show-page .user-info .thumbnail {
   margin-bottom: 0px;
+}
+
+.users-show-page .nav-tabs {
+  margin-bottom: 20px;
+}
+
+.users-show-page .nav-tabs > li.active > a {
+  background-color: #fff;
+}
+
+.users-show-page .list-group .list-group-item {
+  border: none;
+  margin-bottom: 0px;
+  border-bottom: 1px solid #efefef;
+}
+
+.users-show-page .list-group .list-group-item .meta {
+  color: #b3b3b3;
+}
+
+.users-show-page .pagination {
+  margin: 12px 0;
 }
 
 /* Topic Index Page */
