--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -80,7 +80,6 @@ body {
 }
 
 /* User profile page */
-/* User profile page */
 .users-show-page {
   .user-info {
     .thumbnail {
@@ -110,6 +109,14 @@ body {
 
   .pagination {
     margin: 12px 0;
+  }
+
+  .meta {
+    font-size: .9em;
+    color: #b3b3b3;
+  }
+  .reply-content {
+    margin: 6px 0;
   }
 }
 
@@ -159,5 +166,21 @@ body {
       font-size: 28px;
       line-height: 38px;
     }
+  }
+}
+
+.topic-reply {
+  hr {
+    margin-top: 16px;
+    margin-bottom: 16px;
+  }
+
+  a {
+    color: inherit;
+  }
+
+  .meta {
+    font-size: .9em;
+    color: #b3b3b3;
   }
 }
